<resources>

    <string name="app_name">Andriod Lab8</string>
    <string name="chat_app_name">Chat Room</string>
    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="type_ph">Type here</string>
    <string name="go_chat">Go to Chat</string>
    <string name="ck_weather">Go to Check Weather</string>
    <string name="del_title">Do you want to delete this?</string>
    <string name="del_msg1">The selected row is: </string>
    <string name="del_msg2">The database id is: </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>


    <string name="enter_email">Enter your email address</string>
    <string name="email_ph">Type email here</string>
    <string name="enter_pswd">Type your password</string>
    <string name="login">Login</string>

    <string name="app_profile">Your Profile</string>
    <string name="name_hd">Your Name</string>
    <string name="name_ph">Enter your name</string>
    <string name="email_hd">Your email</string>
    <string name="email_ph2">Enter your email</string>
    <string name="pic">Your picture</string>
    <string name="click">Click the button above to take a picture</string>

    <string name="fragment_msg">Message Here</string>
    <string name="fragment_id">ID=</string>
    <string name="fragment_ckbx">Is a Send Message</string>
    <string name="fragment_hide">Hide</string>
    <string name="toolbar">Go to Toolbar page</string>
    <string name="red">Red</string>
    <string name="overflow">You clicked on the overflow menu</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="back">Go Back</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>