<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/thelistview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/sendbtn"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/send" />

        <EditText
            android:id="@+id/typeline"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_weight="2"
            android:hint="@string/type_ph" />

        <Button
            android:id="@+id/rcvbtn"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/receive" />
    </LinearLayout>
</LinearLayout>